@@ -4,26 +4,12 @@
  *
  * This page handles logins for nonuser calendars.
  */
-require_once 'includes/classes/WebCalendar.class';
 
-$WebCalendar =& new WebCalendar ( __FILE__ );
-
-include 'includes/assert.php';
-include 'includes/config.php';
-include 'includes/dbi4php.php';
-include 'includes/functions.php';
-
-$WebCalendar->initializeFirstPhase();
-
-include "includes/$user_inc";
-include 'includes/translate.php';
-
-$WebCalendar->initializeSecondPhase();
-$WebCalendar->setLanguage();
+include_once 'includes/init.php';
 
 load_global_settings ();
 
-//load_user_preferences ();
+$WebCalendar->setLanguage();
 
 // No login for single-user mode
 if ( $single_user == 'Y' ) {
