@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1403574: upcoming.php does not work with HTTP Auth
       1413327: repeated events appear out of order in various pages
       1421389: user-app-: login-app opens wrong login file in _top.
       1422509: Search doesn't search subject, only within description
@@ -189,6 +190,7 @@ Version 1.1.0-CVS (?? ??? 2005)
     + Category was lost wan clicking on prev/next month in month.php
     + Fixed small bug if using 59 minutes for event time
   - New Features / Enhancements / Changes:
+    + Implemented patch 1418938: Upcoming.php updated to run as include or command line
     + Added time selections to menu bar
     + Added admin option to display All Timezones (approx 360)
     + New top menu bar added
